--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,10 +32,11 @@
         />
 
     <EditText
-        android:id="@+id/image"
+        android:id="@+id/takeImage"
         android:layout_below="@+id/phno"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:drawableRight="@drawable/ic_camera"
         android:hint="Take photo"
         />
 
@@ -45,7 +46,7 @@
         android:layout_height="wrap_content"
         android:text="Submit"
         android:layout_margin="20dp"
-        android:layout_below="@+id/image"
+        android:layout_below="@+id/takeImage"
         />
 
     <Button
